# exp

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
configs/countries/germany/: classification.yaml
configs/countries/germany/conditions/: cross_document.yaml  document_freshness.yaml
configs/countries/germany/doc_types/: bank_statement.yaml  identity_document.yaml  loan_application.yaml  salary_slip.yaml  tax_return.yaml
configs/countries/germany/process/: consumer_credit.yaml
configs/guardrails/: global.yaml  pii_patterns.yaml
configs/pipelines/: single_doc_extraction.yaml
core/: context.py  inference.py  pipeline_engine.py  prompt_compiler.py  utils.py  validation.py
core/case/: case_context.py  case_orchestrator.py  dependency_graph.py
core/classification/: classification_rules.yaml  classifier.py
core/conditions/: checker.py
core/cross_doc/: completeness_checker.py  consistency_checker.py  contradiction_detector.py  entity_resolver.py
core/guardrails/: engine.py  injection.py  input_guards.py  output_guards.py  pii.py  verdict.py
core/review/: report_builder.py
core/templates/: classification.j2  condition_check.j2  cross_doc_condition.j2  cross_document_validation.j2  extraction_base.j2  reflection_repair.j2  review_summary.j2
